# trading_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  code.md  pyproject.toml  run_with_backend.py
src/superagent/: .env.example  README.md  README_API_MIGRATION.md  pyproject.toml  quick_test.py  server.py  test_tools_manual.py
src/superagent/generated_models/: README.md
src/superagent/generated_models/strategies/custom/: test_provided_code_20250717_233422.py  test_provided_code_README.md
src/superagent/generated_models/strategies/market_making/: test_market_making_20250717_233422.py  test_market_making_README.md
src/superagent/reports/: report_20250718_101610.md
src/superagent/src/agents/: __init__.py  agents.py
src/superagent/src/api/: __init__.py  app.py
src/superagent/src/config/: __init__.py  agents.py
src/superagent/src/graph/: builder.py  nodes.py
src/superagent/src/prompts/: __init__.py  algogene_archieve.md  algogene_data_fetcher.md  coder.md  coordinator.md  data_fetcher.md  planner.md  supervisor.md  template.py
src/superagent/src/tools/: __init__.py  algogene_client.py  algogene_code_generator.py  algogene_docs_reader.py  api.py  data_analyzer.py  news_crawler.py  openrouter_config.py  report_saver.py
src/superagent/src/utils/: llm_clients.py
src/superagent/tests/: test_algogene_code_generator.py  test_algogene_docs_reader.py  test_algogene_price.py  test_api_basic.py  test_api_offline.py  test_data_fetcher_tools.py  test_enhanced_docstrings.py  test_list_instruments.py  test_print_agent_tools.py  test_simple_agent_tools.py
(+75 files in other folders)
