[tool.poetry]
name = "superagent"
version = "0.1.0"
description = "SuperAgent project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
langchain-community = "^0.3.19"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.8"
langgraph = "^0.3.5"
readabilipy = "^0.3.0"
python-dotenv = "^1.0.1"
socksio = "^1.0.0"
markdownify = "^1.1.0"
browser-use = "^0.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sse-starlette = "^1.6.5"
pandas = "^2.2.3"
numpy = "^2.2.3"
yfinance = "^0.2.54"
langchain-deepseek = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''